add sparefilter filteype fixes

--- a/source-code/client/src/demo.ipynb
+++ b/source-code/client/src/demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This is the notebok style lix documentaiton"
+    "# This is the notebok style lix documentation"
    ]
   },
   {
