feat(rust-rewrite): expand native planner and phase 5 plan

--- a/rfcs/002-rewrite-in-rust/phase-3/m3.4-critical-parity-gate.md
+++ b/rfcs/002-rewrite-in-rust/phase-3/m3.4-critical-parity-gate.md
@@ -4,8 +4,9 @@ Status: complete
 
 ## Scope
 
-- Prove parity for critical read/write/passthrough workflows between `legacy` and `rust_active` rollout modes.
+- Prove parity for critical read/write/validation/passthrough workflows between `legacy` and `rust_active` rollout modes.
 - Keep callback boundary serialization deterministic.
+- Cover boundary-value marshalling and deterministic boundary error surfaces.
 
 ## Delivered
 
@@ -16,6 +17,6 @@ Status: complete
 
 ## Verification
 
-- `pnpm --filter @lix-js/sdk exec vitest run src/engine/rust-rewrite/parity.test.ts src/engine/rust-rewrite/callback-adapter.test.ts src/engine/rust-rewrite/host-bridge.test.ts src/engine/execute-sync.test.ts src/engine/boot.test.ts`
+- `pnpm --filter @lix-js/sdk exec vitest run src/engine/rust-rewrite/callback-adapter.test.ts src/engine/rust-rewrite/host-bridge.test.ts src/engine/rust-rewrite/parity.test.ts src/engine/boot.test.ts`
 
-Result: 5 test files, 26 tests passed.
+Result: 4 test files, 29 tests passed.
