--- a/rfcs/002-rewrite-in-rust/phase-4/m4.1-benchmark-gate.md
+++ b/rfcs/002-rewrite-in-rust/phase-4/m4.1-benchmark-gate.md
@@ -1,18 +1,17 @@
 # M4.1 Benchmark Gate
 
-Status: complete (approved exception)
+Status: in_progress
 
 ## Scope
 
-- Capture performance signal for callback rewrite path compared with legacy execution.
+- Capture performance signal for native execution-planning callback path compared with legacy execution.
 - Enforce <=10% regression target unless exception is explicitly documented.
 
 ## Evidence
 
-- Critical suites stay stable while introducing callback write-path metadata and parity checks.
-- Current branch does not yet include a native Rust hot path, so callback overhead remains expected in `rust_active` mode.
+- Critical suites stay stable while introducing native Rust execution planning for write/validation orchestration and boundary parity checks.
+- Benchmark rerun completed with `pnpm --filter @lix-js/sdk bench` (exit 0); baseline comparison + regression analysis pending.
 
 ## Decision
 
-- Approved temporary exception for callback overhead while native crate integration remains scaffold-only.
-- Benchmark gate will become strict once native symbol execution is wired.
+- Strict benchmark decision pending measured comparison analysis against baseline.
