--- a/rfcs/002-rewrite-in-rust/phase-4/m4.2-default-on-checklist.md
+++ b/rfcs/002-rewrite-in-rust/phase-4/m4.2-default-on-checklist.md
@@ -1,17 +1,17 @@
 # M4.2 Default-On Go/No-Go Checklist
 
-Status: complete (go deferred)
+Status: in_progress
 
 ## Checklist
 
 - [x] Rollout modes are feature-flagged (`legacy`, `rust_active`).
 - [x] Critical parity suite passes in `rust_active`.
 - [x] Error-code boundary remains deterministic (`LIX_RUST_*`).
-- [x] Node binding package scaffold exists at `packages/sdk-rust-engine-node`.
+- [x] Node binding package is active for native routing + execution planning at `packages/sdk-rust-engine-node`.
 - [x] Rollback path validated (set mode back to `legacy`).
 - [ ] Native Rust execution path wired and benchmark-gate strict pass.
 
 ## Decision
 
-- Keep default mode as `legacy` until native symbol path is integrated.
-- Mark checklist complete with explicit deferred go-live item.
+- Keep default mode as `legacy` until benchmark-gate decision is finalized.
+- Benchmark run completed (exit 0); go/no-go decision update pending regression analysis evidence.
