--- a/rfcs/002-rewrite-in-rust/phase-3/m3.1-node-binding-integration.md
+++ b/rfcs/002-rewrite-in-rust/phase-3/m3.1-node-binding-integration.md
@@ -7,6 +7,7 @@ Status: complete
 - Add monorepo package scaffold for the Node Rust engine binding.
 - Lock first release target matrix to Linux x64.
 - Create native crate location agreed in the rewrite plan.
+- Extend native binary interface from routing-only (`route`) to execution planning (`plan`) for write/validation orchestration ownership.
 
 ## Delivered
 
@@ -16,10 +17,11 @@ Status: complete
 - `packages/sdk-rust-engine-node/src/index.test.ts`
 - `packages/sdk-rust-engine-node/native/lix-engine/Cargo.toml`
 - `packages/sdk-rust-engine-node/native/lix-engine/src/lib.rs`
+- `packages/sdk-rust-engine-node/native/lix-engine/src/main.rs`
 
 ## Verification
 
 - `pnpm --filter @lix-js/sdk-rust-engine-node test`
 - `pnpm --filter @lix-js/sdk-rust-engine-node build`
 
-Both commands pass on this branch.
+Both commands pass on this branch, including `validation` statement routing and `planExecuteInRust` shape checks.
